resources/stylesheets/index.html.css
:root {
  --home-load-time: 1000ms;
}

html {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  min-height: 100%;
  min-width: 100%;
}

body {
  height: 100%;
  min-width: 100%;
  display: flex;
  flex-direction: column;
  margin: 0;
}

.page-container {
  display: flex;
  flex: 1 1 auto;
  width: 100%;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

.home-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  animation: home-load var(--home-load-time) ease-in-out var(--header-load-time) backwards;
}

.img-container {
  display: flex;
  align-items: center;
  animation: image-load var(--home-load-time) ease-in-out calc(var(--home-load-time) + var(--header-load-time)) backwards;
}

.home-img {
  height: auto;
  width: auto;
  max-width: 500px;
  max-height: 500px;
  border-radius: 50%;
  box-shadow: 0 0 10px black;
  margin: 50px;
}

.title {
  text-align: center;
  font-family: roboto, sans-serif;
  color: black;
  font-weight: 300;
  font-size: 100px;
  line-height: 1em;
  margin: 0 0 50px;
}

.button-container {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.redirect-button {
  position: relative;
  width: 200px;
  font-size: 15px;
  background-color: #e3e3e3;
  border: none;
  color: black;
  margin: 5px;
  cursor: pointer;
  z-index: 1;
  text-decoration: none;
  font-family: roboto, sans-serif;
  text-align: center;
  padding: 1em;
  transition: 300ms color ease-in-out;
}

.redirect-button:hover,
.redirect-button:focus {
  color: white;
}

.redirect-button:before {
  content: '';
  background-color: var(--accent-colour);
  position: absolute;
  z-index: -1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  transform-origin: right;
  transform: scaleX(0);
  transition: transform 300ms ease-in-out;
}

.redirect-button:hover:before,
.redirect-button:focus:before {
  transform-origin: left;
  transform: scaleX(1);
}

.secret-btn {
  position: absolute;
  right: 0;
  bottom: 0;
}

.secret-btn:not(:focus) {
  clip: rect(0px, 0px, 0px, 0px);
  overflow: hidden;
  padding: 0;
}

@keyframes home-load {
  0% {
    transform: translateX(-300px);
    opacity: 0;
  }

  100% {
    transform: translateX(0);
    opacity: 1;
  }
}

@keyframes image-load {
  0% {
    transform: translateX(300px);
    opacity: 0;
  }

  100% {
    transform: translateX(0);
    opacity: 1;
  }
}

@media screen and (max-width: 500px) {
  .home-img {
    width: 100vw;
    height: 100vw;
    margin-left: 0;
    margin-right: 0;
  }
}

@media screen and (max-width: 230px) {
  .button-container {
    justify-content: unset;
  }
}

